--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -24,6 +24,9 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+    @media only screen and (max-width: 415px) {
+      flex-direction: column;
+    }
   }
   &__container-checkbox {
     display: none;
@@ -39,6 +42,13 @@
     display: inline-block;
     box-shadow: $box-shadow;
     transition: $primary-transition;
+    @media only screen and (max-width: 555px) {
+      padding: .7rem .5rem;
+    }
+    @media only screen and (max-width: 415px) {
+      width: 53%;
+      padding: none;
+    }
     &:hover {
       cursor: pointer;
       transform: translateY(-.2rem)
@@ -54,7 +64,7 @@
   }
   &__card {
     position: relative;
-    margin: .5rem 0;
+    margin: 1.2rem 0;
     flex-basis: 30%;
     transition: $primary-transition;
     color: $color-primary;
@@ -80,6 +90,12 @@
     &:hover &-name {
       transform: translateY(0)
     }
+    @media only screen and (max-width: 1291px) {
+      color: $color-black;
+    }
+    @media only screen and (max-width: 800px) {
+      flex-basis: 100%;
+    }
   }
   &__card-figure {
     position: relative;
@@ -88,6 +104,15 @@
     height: 30vh;
     transition: $primary-transition;
     backface-visibility: hidden;
+    @media only screen and (max-width: 1600px) {
+      height: 20vh;
+    }
+    @media only screen and (max-width: 1150px) {
+      height: 15vh;
+    }
+    @media only screen and (max-width: 800px) {
+      height: 35vh;
+    }
     &::before {
       @include beforAfter (linear-gradient(to right bottom, rgba(19, 20, 20, .9), rgba(19, 20, 20, .9)));
       top: 0;
@@ -95,6 +120,9 @@
       width: 0%;
       height: 50%;
       z-index: 7000;
+      @media only screen and (max-width: 1291px) {
+        display: none;
+      }
     }
     &::after {
       @include beforAfter (linear-gradient(to right bottom, rgba(19, 20, 20, .9), rgba(19, 20, 20, .9)));
@@ -103,6 +131,9 @@
       width: 0%;
       height: 50%;
       z-index: 7000;
+      @media only screen and (max-width: 1291px) {
+        display: none;
+      }
     }
   }
   &__card-img {
@@ -127,6 +158,9 @@
     transition: $sec-transition;
     background: transparent;
     transform: translateY(-15rem);
+    @media only screen and (max-width: 1291px) {
+      display: none;
+    }
   }
   &__card-name {
     position: absolute;
@@ -138,6 +172,9 @@
     transition: $sec-transition;
     background: transparent;
     transform: translateY(15rem);
+    @media only screen and (max-width: 1291px) {
+      display: none;
+    }
   }
 }
 
