--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -15,15 +15,24 @@
     width: 60%;
     margin: 0rem auto;
     color: rgba(128, 142, 155, 1.0);
+    @media only screen and (max-width: 998px) {
+      width: 100%;
+    }
   }
   &__container-content {
     width: 100%;
     margin-top: 1.5rem;
     display: flex;
     justify-content: space-between;
+    @media only screen and (max-width: 800px) {
+      flex-direction: column;
+    }
   }
   &__bio {
     width: 47%;
+    @media only screen and (max-width: 800px) {
+      width: 100%;
+    }
   }
   &__email {
     margin: .7rem 0;
@@ -55,12 +64,22 @@
       cursor: pointer;
       transform: translateY(-.2rem);
     }
+    @media only screen and (max-width: 800px) {
+      width: 15%;
+    }
+    @media only screen and (max-width: 555px) {
+      width: 20%;
+    }
   }
   &__skills {
     width: 47%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    @media only screen and (max-width: 800px) {
+      width: 100%;
+      margin: 3rem 0;
+    }
   }
   &__skill {
     position: relative;
@@ -78,11 +97,17 @@
   &__skill-letters {
     width: 50%;
     transform: translateY(-2rem);
+    @media only screen and (max-width: 998px) {
+      transform: translateY(-3rem)
+    }
   }
   &__skill-numbers {
     width: 20%;
     transform: translateY(-2rem);
-    text-align: end
+    text-align: end;
+    @media only screen and (max-width: 998px) {
+      transform: translateY(-3rem);
+    }
   }
 }
 
