--- a/src/scss/components/_experience.scss
+++ b/src/scss/components/_experience.scss
@@ -38,14 +38,24 @@
     margin-top: 1.5rem;
     display: flex;
     justify-content: space-between;
+    @media only screen and (max-width: 555px) {
+      flex-direction: column;
+    }
   }
   &__container-education {
     width: 45%;
+    @media only screen and (max-width: 555px) {
+      width: 100%;
+    }
   }
   &__item {
     margin: 1rem 0;
   }
   &__container-experience {
     width: 45%;
+    @media only screen and (max-width: 555px) {
+      width: 100%;
+      margin: 1.5rem 0;
+    }
   }
 }
