--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -16,23 +16,35 @@
     display: flex;
     flex-wrap: wrap;
     align-content: baseline;
-    justify-content: space-evenly
+    justify-content: start;
+    @media only screen and (max-width: 800px) {
+      justify-content: center;
+      width: 95%;
+    }
   }
   &__card {
     background: #fff;
     flex-basis: 30%;
-    height: 19rem;
+    min-height: 19rem;
     padding: 2rem;
     text-align: center;
     color: #1e272e;
     box-shadow: $box-shadow;
     border-radius: .2rem;
-    margin: 1rem 0;
+    margin: 1rem;
     &:hover {
       cursor: pointer;
     }
     &:hover &-icon {
       fill: rgba(30, 39, 46, 1.0);
+    }
+    @media only screen and (max-width: 998px) {
+      flex-basis: 45%;
+      margin: 1.5rem;
+    }
+    @media only screen and (max-width: 800px) {
+      flex-basis: 100%;
+      margin: 1rem;
     }
   }
   &__card-icon {
@@ -41,6 +53,10 @@
     width: 2.5rem;
     margin-bottom: 1rem;
     transition: $primary-transition;
+    @media only screen and (max-width: 998px) {
+      height: 4rem;
+      width: 4rem;
+    }
   }
   &__card-h4 {
     position: relative;
