--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -14,10 +14,10 @@
   &__sidenav-btndiv {
     display: none;
     position: fixed;
-    top: 0%;
+    top: 1%;
     right: 8%;
-    width: 7%;
-    height: 4%;
+    width: 5%;
+    height: 8%;
     z-index: 8000;
     &::before {
       @include beforAfter ($header-color);
@@ -58,7 +58,7 @@
     z-index: 9000;
     width: 40%;
     height: 100%;
-    background: rgba(#353b48, .9);
+    background: rgba(19, 20, 20, 0.8);
     display: none;
     transition: $primary-transition;
     transform: translateX(100%);
