--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -48,7 +48,7 @@
   <!--side nav ending-->
   <div class="container" id="container">
     <!--header section beginning-->
-    <div class="header">
+    <header class="header">
       <div class="header__container">
         <p class="header__title">
           David
@@ -125,7 +125,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </header>
     <!--header section ending-->
 
     <!--about section beginning-->
