--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -24,12 +24,12 @@
   padding: .5rem 1.5rem;
   border-radius: 3rem;
   background: transparent;
-  color: $header-color;
+  color: $color-header-color;
   outline: none;
   display: inline-block;
   text-transform: uppercase;
   letter-spacing: .1rem;
-  border: 1px solid $header-color;
+  border: 1px solid $color-header-color;
   box-shadow: $box-shadow;
   transition: $primary-transition;
   &:hover {
