--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -1,5 +1,5 @@
 .contact {
-  background: #f7f7f7;
+  background: $color-white-2;
   position: relative;
   overflow: hidden;
   &::before {
@@ -24,7 +24,7 @@
     width: 75%;
   }
   &__container-h2 {
-    color: rgba(30, 39, 46, 1.0)
+    color: $color-black-h2;
   }
   &__container-content {
     width: 100%;
@@ -38,7 +38,7 @@
   &__address {
     width: 36%;
     padding: 1rem;
-    color: rgba(30, 39, 46, 1.0);
+    color: $color-black-h2;
     height: 100%;
     z-index: 7000;
     @media only screen and (max-width: 800px) {
@@ -49,7 +49,7 @@
     margin: 1rem 0;
   }
   &__address-icon {
-    fill: rgba(255, 143, 0, 1.0);
+    fill: $color-primary;
     height: 2.5rem;
     width: 2.5rem;
     transition: $primary-transition;
@@ -86,7 +86,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(255, 143, 0, 1);
+      background-color: $color-primary;
     }
   }
   &__form-input {
@@ -96,7 +96,7 @@
     font-family: inherit;
     color: $color-black;
     border-radius: 2px;
-    background-color: rgba(255, 143, 0, 1);
+    background-color: $color-primary;
     border: none;
     border-bottom: 3px solid transparent;
     display: block;
@@ -107,7 +107,7 @@
       border-bottom: 3px solid $color-black;
     }
     &:focus:invalid {
-      border-bottom: 3px solid #eb4d4b;
+      border-bottom: 3px solid $color-error;
     }
     &::-webkit-input-placeholder {
       color: $color-black;
@@ -138,7 +138,7 @@
       border-bottom: 3px solid $color-black;
     }
     &:focus:invalid {
-      border-bottom: 3px solid #eb4d4b;
+      border-bottom: 3px solid $color-error;
     }
     &::-webkit-input-placeholder {
       color: $color-black;
@@ -151,7 +151,7 @@
     @include btnStyling;
     color: $color-primary;
     padding: .7rem .1rem;
-    background: linear-gradient(to right bottom, rgba(19, 20, 20, 1), rgba(19, 20, 20, .9));
+    background: $color-btn-black;
     border: none;
     margin-right: 1rem;
     width: 20%;
