--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -1,5 +1,5 @@
 .portfolio {
-  background: rgba(255, 255, 255, 1.0);
+  background: $color-white;
   &__container {
     position: relative;
     margin: 0 auto;
@@ -7,12 +7,12 @@
     width: 80%;
   }
   &__container-h2 {
-    color: rgba(30, 39, 46, 1.0);
+    color: $color-black-h2;
     width: 30%;
     position: relative;
     margin: .5rem auto;
     &::before {
-      @include beforAfter(rgba(128, 142, 155, 1.0));
+      @include beforAfter($color-grey-sub);
       bottom: 10%;
       left: 25%;
       width: 50%;
@@ -36,7 +36,7 @@
     position: relative;
     padding: .7rem 1.3rem;
     border-radius: 3rem;
-    background: linear-gradient(to right bottom, rgba(19, 20, 20, 1), rgba(19, 20, 20, .9));
+    background: $color-btn-black;
     color: $color-primary;
     outline: none;
     display: inline-block;
@@ -114,7 +114,7 @@
       height: 35vh;
     }
     &::before {
-      @include beforAfter (linear-gradient(to right bottom, rgba(19, 20, 20, .9), rgba(19, 20, 20, .9)));
+      @include beforAfter ($color-portfolio-card-pseudoelement);
       top: 0;
       right: 0;
       width: 0%;
@@ -125,7 +125,7 @@
       }
     }
     &::after {
-      @include beforAfter (linear-gradient(to right bottom, rgba(19, 20, 20, .9), rgba(19, 20, 20, .9)));
+      @include beforAfter ($color-portfolio-card-pseudoelement);
       bottom: 0;
       left: 0;
       width: 0%;
