--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -1,5 +1,5 @@
 .services {
-  background: #f7f7f7;
+  background: $color-white-2;
   &__container {
     position: relative;
     margin: 0 auto;
@@ -8,7 +8,7 @@
   }
   &__container-h2 {
     text-align: center;
-    color: rgba(30, 39, 46, 1.0);
+    color: $color-black-h2;
   }
   &__container-content {
     width: 100%;
@@ -23,12 +23,12 @@
     }
   }
   &__card {
-    background: #fff;
+    background: $color-white;
     flex-basis: 30%;
     min-height: 19rem;
     padding: 2rem;
     text-align: center;
-    color: #1e272e;
+    color: $color-service-card-title;
     box-shadow: $box-shadow;
     border-radius: .2rem;
     margin: 1rem;
@@ -36,7 +36,7 @@
       cursor: pointer;
     }
     &:hover &-icon {
-      fill: rgba(30, 39, 46, 1.0);
+      fill: $color-service-card-title;
     }
     @media only screen and (max-width: 998px) {
       flex-basis: 45%;
@@ -48,7 +48,7 @@
     }
   }
   &__card-icon {
-    fill: rgba(255, 143, 0, 1.0);
+    fill: $color-primary;
     height: 2.5rem;
     width: 2.5rem;
     margin-bottom: 1rem;
@@ -62,7 +62,7 @@
     position: relative;
     margin-bottom: 1rem;
     &::before {
-      @include beforAfter(rgba(128, 142, 155, 1.0));
+      @include beforAfter($color-grey-sub);
       bottom: 0;
       left: 35%;
       width: 30%;
@@ -70,7 +70,7 @@
     }
   }
   &__card-para {
-    color: #808e9b;
+    color: $color-grey-sub;
     text-align: left;
   }
 }
