--- a/src/scss/layout/_container.scss
+++ b/src/scss/layout/_container.scss
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   overflow-x: hidden;
-  background: rgba(255, 255, 255, 1.0);
+  background: $color-white;
   &__sidenav-check {
     position: absolute;
     top: 0;
@@ -20,14 +20,14 @@
     height: 8%;
     z-index: 8000;
     &::before {
-      @include beforAfter ($header-color);
+      @include beforAfter ($color-header-color);
       width: 100%;
       height: 2%;
       top: 20%;
       left: 0;
     }
     &::after {
-      @include beforAfter ($header-color);
+      @include beforAfter ($color-header-color);
       width: 90%;
       height: 2%;
       top: 35%;
@@ -44,7 +44,7 @@
     top: 50%;
     left: 0;
     &::before {
-      @include beforAfter ($header-color);
+      @include beforAfter ($color-header-color);
       width: 90%;
       height: 8%;
       top: 0%;
@@ -58,7 +58,7 @@
     z-index: 9000;
     width: 40%;
     height: 100%;
-    background: rgba(19, 20, 20, 0.8);
+    background: $color-sidenav;
     display: none;
     transition: $primary-transition;
     transform: translateX(100%);
@@ -78,7 +78,7 @@
   &__sidenav-link:link,
   &__sidenav-link:visited,
   &__sidenav-link:active {
-    color: $header-color;
+    color: $color-header-color;
     display: inline-block;
   }
 }
