--- a/src/scss/base/_animations.scss
+++ b/src/scss/base/_animations.scss
@@ -51,3 +51,24 @@
     transform: translate(0);
   }
 }
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: .4;
+  }
+  50% {
+    opacity: .6;
+  }
+  70% {
+    opacity: .7;
+  }
+  80% {
+    opacity: .8;
+  }
+  100% {
+    opacity: 1;
+  }
+}
