--- a/src/scss/components/_clients.scss
+++ b/src/scss/components/_clients.scss
@@ -46,7 +46,8 @@
     flex-wrap: nowrap;
     align-content: baseline;
     padding: 3rem 0;
-    transition: $sec-transition;
+    transition: all 1s cubic-bezier(0.165, 0.84, 0.44, 1);
+    backface-visibility: hidden;
   }
   &__card {
     background: transparent;
@@ -66,6 +67,9 @@
       flex-basis: 48%;
     }
     @media only screen and (max-width: 800px) {
+      flex-basis: 80%;
+    }
+    @media only screen and (max-width: 600px) {
       flex-basis: 100%;
     }
   }
