--- a/src/scss/components/_contact.scss
+++ b/src/scss/components/_contact.scss
@@ -150,7 +150,7 @@
   &__form-btn:active {
     @include btnStyling;
     color: $color-primary;
-    padding: .7rem .1rem;
+    padding: 1.2rem .1rem;
     background: $color-btn-black;
     border: none;
     margin-right: 1rem;
