--- a/src/scss/components/_portfolio.scss
+++ b/src/scss/components/_portfolio.scss
@@ -59,14 +59,15 @@
     margin: 1rem auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    align-content: baseline;
+    justify-content: start;
     transition: $primary-transition;
   }
   &__card {
     position: relative;
-    margin: 1.2rem 0;
+    margin: 1rem;
     flex-basis: 30%;
-    transition: $primary-transition;
+    transition: all .4s cubic-bezier(0.165, 0.84, 0.44, 1);
     color: $color-primary;
     overflow: hidden;
     backface-visibility: hidden;
