--- a/src/scss/components/_clients.scss
+++ b/src/scss/components/_clients.scss
@@ -55,7 +55,7 @@
     flex-basis: 30%;
     flex-shrink: 0;
     text-align: center;
-    border: 1px solid $color-primary;
+    border-left: 1px solid $color-primary;
     box-shadow: $box-shadow;
     border-radius: .2rem;
     margin: 1rem 0;
