--- a/src/scss/components/_services.scss
+++ b/src/scss/components/_services.scss
@@ -29,9 +29,10 @@
     padding: 2rem;
     text-align: center;
     color: $color-service-card-title;
-    box-shadow: $box-shadow;
     border-radius: .2rem;
     margin: 1rem;
+    border-bottom: solid 1px $color-service-card-title;
+    border-left: solid 1px $color-service-card-title;
     &:hover {
       cursor: pointer;
     }
