added gallery open feature

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+
+  <!--gallery-->
+
+  <!--gallery-->
+
   <!--side nav btn beginning-->
   <div class="container__sidenav-btndiv" id="container__sidenav-btndiv">
     <div class="container__sidenav-btn">
@@ -46,6 +51,7 @@
     </ul>
   </div>
   <!--side nav ending-->
+
   <div class="container" id="container">
     <!--header section beginning-->
     <header class="header">
