--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import "base/typography";
 @import "base/utilities";
 @import "layout/container";
+@import "components/gallery";
 @import "components/header";
 @import "components/about";
 @import "components/experience";
