--- a/src/scss/components/_blog.scss
+++ b/src/scss/components/_blog.scss
@@ -152,6 +152,9 @@
     width: 50%;
     display: flex;
     flex-direction: column;
+    @media only screen and (max-width: 1024px) {
+      width: 80%;
+    }
     @media only screen and (max-width: 400px) {
       width: 70%;
     }
@@ -165,7 +168,6 @@
     height: 3.5rem;
     padding: .8rem;
     width: 100%;
-    font-family: inherit;
     color: $color-black;
     border-radius: 54px;
     background-color: $color-primary;
@@ -200,6 +202,13 @@
     &:hover {
       cursor: pointer;
       transform: translateY(-5.3rem)
+    }
+    @media only screen and (max-width: 800px) {
+      width: 20%;
+    }
+    @media only screen and (max-width: 400px) {
+      padding: 1.1rem .1rem;
+      width: 25%;
     }
   }
 }
