--- a/src/scss/components/_gallery.scss
+++ b/src/scss/components/_gallery.scss
@@ -14,6 +14,11 @@
     height: 60vh;
     transition: $primary-transition;
     backface-visibility: hidden;
+    @media only screen and (max-width: 1024px) {
+      margin: 10vh auto;
+      width: 85%;
+      height: 53%;
+    }
   }
   &__img {
     width: 100%;
